Front page done?

--- a/index.html
+++ b/index.html
@@ -50,14 +50,6 @@
     <!-- header four area start -->
     <header class="header-style-one style-two header--sticky">
       <my-header> </my-header>
-      <!-- <div class="gradient-blur-flipped">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-      </div> -->
       <div class="gradient-bg"></div>
     </header>
 
@@ -72,38 +64,38 @@
           <div class="slide">
             <div class="title-wrapper">
               <img
-                class="crest-white"
-                src="assets/images/logo/crest-white.svg"
+                class="stag-antlers"
+                src="assets/images/svgs/stag-antlers.svg"
                 alt=""
               />
-              <h2>The Club at <span class="italicized">MariMack</span></h2>
+              <h2>Stagg Hill Golf Club</h2>
             </div>
           </div>
           <div class="slide">
             <div class="title-wrapper">
               <img
-                class="crest-white"
-                src="assets/images/logo/crest-white.svg"
+                class="stag-antlers"
+                src="assets/images/svgs/stag-antlers.svg"
                 alt=""
               />
-              <h2>The Club at <span class="italicized">MariMack</span></h2>
+              <h2>Stagg Hill Golf Club</h2>
             </div>
           </div>
           <div class="slide">
             <div class="title-wrapper">
               <img
-                class="crest-white"
-                src="assets/images/logo/crest-white.svg"
+                class="stag-antlers"
+                src="assets/images/svgs/stag-antlers.svg"
                 alt=""
               />
-              <h2>The Club at <span class="italicized">MariMack</span></h2>
+              <h2>Stagg Hill Golf Club</h2>
             </div>
           </div>
           <div class="slide">
             <div class="title-wrapper">
               <img
-                class="crest-white"
-                src="assets/images/logo/crest-white.svg"
+                class="stag-antlers"
+                src="assets/images/svgs/stag-antlers.svg"
                 alt=""
               />
               <h2>The Club at <span class="italicized">Mack</span></h2>
@@ -119,16 +111,16 @@
               data-wow-offset="100"
               data-wow-delay=".7s"
             >
-              Fall in love with the greatest game ever played at the MariMack
-              Golf Complex in Kearney, Missouri! We are an 18-hole executive
-              golf course located 25 minutes northeast of downtown Kansas City.
+              Experience golf at its finest at Stagg Hill Golf Club in
+              Manhattan, KS! Our scenic 18-hole course offers a fun, challenging
+              round for all skill levels, just minutes from downtown.
             </div>
           </div>
         </div>
       </div>
 
       <div class="shape wow toBottomLeft" data-wow-offset="120">
-        <img src="assets/images/banner/checkered.svg" alt="" />
+        <img src="assets/images/svgs/checkered-upper.svg" alt="" />
       </div>
     </div>
     <!-- rts banner four end -->
@@ -137,7 +129,7 @@
       class="why-choose-us-working-process introduction-section rts-section-gap mobile-padding"
     >
       <div class="shape-top-right wow toBottomLeft">
-        <img src="assets/images/service/checkered.svg" alt="" />
+        <img src="assets/images/svgs/checkered-lower.svg" alt="" />
       </div>
       <div class="container">
         <div class="row g-5 justify-content-between">
@@ -210,22 +202,19 @@
       class="rts-blog-area rts-section-gap position-relative homepage-notices"
     >
       <div class="container">
-        <div class="row">
-          <div class="col-lg-12">
-            <div class="text-center-title-bg-white">
-              <h2 class="title">Notices</h2>
-            </div>
-          </div>
+        <div class="text-center-title-bg-white">
+          <h3 class="title">Notices</h3>
         </div>
       </div>
       <div class="container">
         <div
-          class="row g-0 wow fadeInUp h-100"
+          class="row g-5 wow fadeInUp"
           data-wow-offset="120"
+          data-masonry='{"percentPosition": true }'
           style="visibility: visible; animation-name: fadeInUp"
         >
-          <div class="col-lg-4 col-md-6 col-sm-12 h-100">
-            <div class="single-blog-area-start border-left h-100">
+          <div class="col-md-6 col-sm-12">
+            <div class="single-blog-area-start border-left">
               <a href="blog-details.html" class="thumbnail">
                 <div class="image-area">
                   <img
@@ -236,33 +225,66 @@
                   />
                 </div>
 
-                <div class="inner-content-area">
+                <div class="inner-content-area d-flex">
                   <div class="top-area">
                     <h3 class="title animated fadeIn">Junior Golf Camp</h3>
 
-                    <p class="disc">
-                      How do you create compelling presentations that wow your
-                      colleagues and impress your managers?
+                    <p>
+                      These 3 day camps hosted by PGA Pro Chad Myers will focus
+                      on short game and full swing each day of camp. Rules and
+                      etiquette will also be covered to get your Jr. Golfer
+                      ready for the course.
                     </p>
-                    <div class="bottom-author-area">
-                      <img
-                        loading="lazy"
-                        rel="preload"
-                        src="assets/images/testimonials/01.png"
-                        alt="author"
-                      />
-                      <div class="author-area-info">
-                        <h6 class="title">Lage Freeman</h6>
-                        <span>24 Sept 2024</span>
-                      </div>
+                    <hr />
+                    <h6>2025 Dates</h6>
+                    <p>June 2 - 4, June 23 - 25</p>
+                    <hr />
+                    <div class="row flex-row">
+                      <div>Cost per camp</div>
+                      <div class="spanner"></div>
+                      <div>$50/child</div>
                     </div>
+                    <div class="row flex-row">
+                      <div>K - 3rd grades</div>
+                      <div class="spanner"></div>
+                      <div>8:30 - 9:30am</div>
+                    </div>
+                    <div class="row flex-row">
+                      <div>4th - 6th grades</div>
+                      <div class="spanner"></div>
+                      <div>10 - 11am</div>
+                    </div>
+                    <div class="row flex-row">
+                      <div>7th - 11th grades</div>
+                      <div class="spanner"></div>
+                      <div>11:30 - 12:30pm</div>
+                    </div>
+                    <hr class="mt-5" />
+                    <p>Questions? Please, contact Chad Myers → (785) 539 - 1041.</p>
+                  </div>
+                  <div class="row link-bar flex-row">
+                    <div>Register your child</div>
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="32"
+                      height="32"
+                      viewBox="0 0 32 32"
+                    >
+                      <path
+                        d="M9.3335 22.6667L22.6668 9.33337M22.6668 9.33337H9.3335M22.6668 9.33337V22.6667"
+                        stroke="#999999"
+                        stroke-width="1.5"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      ></path>
+                    </svg>
                   </div>
                 </div>
               </a>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 col-sm-12 h-100">
-            <div class="single-blog-area-start h-100">
+          <div class="col-md-6 col-sm-12">
+            <div class="single-blog-area-start">
               <a href="blog-details.html" class="thumbnail">
                 <div class="image-area">
                   <img
@@ -273,34 +295,90 @@
                   />
                 </div>
 
-                <div class="inner-content-area">
+                <div class="inner-content-area d-flex">
                   <div class="top-area">
                     <h3 class="title animated fadeIn">New Pro Shop Page!</h3>
 
-                    <p class="disc">
-                      How do you create compelling presentations that wow your
-                      colleagues and impress your managers?
-                    </p>
-                    <div class="bottom-author-area">
-                      <img
-                        loading="lazy"
-                        rel="preload"
-                        src="assets/images/testimonials/01.png"
-                        alt="author"
-                      />
-                      <div class="author-area-info">
-                        <h6 class="title">Lage Freeman</h6>
-                        <span>24 Sept 2024</span>
-                      </div>
+                    <p>Click here to check out the new pro shop page.</p>
+                    <hr />
+                    <div class="specials">
+                      <h6>This month's specials.</h6>
+                      <p class="p2">*1/2 price on all apparel!*</p>
+                      <p class="p2">*Golf Pride CPX Grips $6.50 each*</p>
+                      <p class="p2">*Golf Pride Microsuede Wrap $5.50 each*</p>
+                      <p>*While supplies last*</p>
                     </div>
+                    <hr />
+                  </div>
+                  <div class="row link-bar flex-row">
+                    <div>Visit page</div>
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="32"
+                      height="32"
+                      viewBox="0 0 32 32"
+                    >
+                      <path
+                        d="M9.3335 22.6667L22.6668 9.33337M22.6668 9.33337H9.3335M22.6668 9.33337V22.6667"
+                        stroke="#999999"
+                        stroke-width="1.5"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      ></path>
+                    </svg>
                   </div>
                 </div>
               </a>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 col-sm-12 h-100">
-            <div class="single-blog-area-start h-100">
+          <div class="col-md-6 col-sm-12">
+            <div class="single-blog-area-start">
               <a href="blog-details.html" class="thumbnail">
+                <div class="image-area">
+                  <img
+                    loading="lazy"
+                    rel="preload"
+                    src="images/callaway-notice.jpg"
+                    alt=""
+                  />
+                </div>
+
+                <div class="inner-content-area d-flex">
+                  <div class="top-area">
+                    <h3 class="title animated fadeIn">Customize Your Dozens</h3>
+                    <h6>Buy three customized dozens, get one free!</h6>
+                    <p>
+                      Use the promo code
+                      <span class="highlighted">202557700</span>
+                      in this link and place your order. An $8 shipping charge
+                      will be added to each order.
+                    </p>
+                  </div>
+                  <div class="row link-bar flex-row">
+                    <div>Place your order</div>
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="32"
+                      height="32"
+                      viewBox="0 0 32 32"
+                    >
+                      <path
+                        d="M9.3335 22.6667L22.6668 9.33337M22.6668 9.33337H9.3335M22.6668 9.33337V22.6667"
+                        stroke="#999999"
+                        stroke-width="1.5"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      ></path>
+                    </svg>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-sm-12">
+            <div class="single-blog-area-start">
+              <a href="blog-details.html" class="thumbnail h-100">
                 <div class="image-area">
                   <img
                     loading="lazy"
@@ -310,28 +388,34 @@
                   />
                 </div>
 
-                <div class="inner-content-area">
+                <div class="inner-content-area d-flex">
                   <div class="top-area">
                     <h3 class="title animated fadeIn">
                       Renew Your Handicap Online
                     </h3>
 
-                    <p class="disc">
-                      How do you create compelling presentations that wow your
-                      colleagues and impress your managers?
+                    <p>
+                      You can now renew your handicap through Stagg Hill online.
+                      You can also join online, if you have never had a handicap
+                      index before.
                     </p>
-                    <div class="bottom-author-area">
-                      <img
-                        loading="lazy"
-                        rel="preload"
-                        src="assets/images/testimonials/01.png"
-                        alt="author"
-                      />
-                      <div class="author-area-info">
-                        <h6 class="title">Lage Freeman</h6>
-                        <span>24 Sept 2024</span>
-                      </div>
-                    </div>
+                  </div>
+                  <div class="row link-bar flex-row">
+                    <div>Click to renew with us</div>
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="32"
+                      height="32"
+                      viewBox="0 0 32 32"
+                    >
+                      <path
+                        d="M9.3335 22.6667L22.6668 9.33337M22.6668 9.33337H9.3335M22.6668 9.33337V22.6667"
+                        stroke="#999999"
+                        stroke-width="1.5"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      ></path>
+                    </svg>
                   </div>
                 </div>
               </a>
@@ -354,7 +438,7 @@
               data-wow-delay=".1s"
             >
               <div class="hours-table-brow">
-                <div class="table-title-wrapper ">
+                <div class="table-title-wrapper">
                   <div class="icon-box">
                     <img class="golf-icon" src="assets/images/icons/golf.svg" />
                   </div>
@@ -412,11 +496,11 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="title-center-2">
-              <h4 class="title">Club Partners</h4>
+              <h3 class="title">Club Partners</h3>
             </div>
           </div>
         </div>
-        <div class="row g-0 mt--70">
+        <div class="row g-0">
           <div class="col-lg-4 col-md-6 col-sm-12 col-12">
             <div class="single-solution-style-one border-left h-100">
               <a href="https://www.ableprintingcompany.com/" target="_blank">
@@ -593,5 +677,12 @@
     <script defer src="assets/js/main.js"></script>
     <script src="./assets/js/weather.js "></script>
     <script type="module" src="./assets/js/stacked-images.js "></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js?version=1"
+      integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D"
+      crossorigin="anonymous"
+      
+      defer
+    ></script>
   </body>
 </html>
