Knocking out Greens Fees page.

--- a/book-tee-time.html
+++ b/book-tee-time.html
@@ -59,8 +59,9 @@
 
   <body>
     <!-- header four area start -->
-    <header class="header-area-four header--sticky">
+    <header class="header-style-one style-two header--sticky style-white">
       <my-header> </my-header>
+      <div class="gradient-bg"></div>
     </header>
 
     <!-- rts banner four start -->
@@ -88,39 +89,9 @@
     <!-- rts banner four end -->
 
     <section class="container booking-container mobile-padding">
-      <div class="row">
-        <div class="col-lg-7">
-          <p class="p1 wow fadeInUp" data-wow-offset="120" data-wow-delay=".5s">
-            If you have a minimum of two players, you may use this to book
-            online. This is always for 18 holes + cart throughout the day. We do
-            set rates for one hour before sundown that are intended for 9 holes
-            + cart (or as many holes as you can get in before sundown).
-          </p>
-        </div>
-        <div class="col-lg-4 mt--0">
-          <div
-            class="wow fadeInUp id-card-card"
-            data-wow-offset="120"
-            data-wow-delay=".7s"
-          >
-            <div class="crycon">
-              <img
-                class="id-card"
-                src="assets/images/icons/id-card.svg"
-                alt=""
-              />
-            </div>
-            <p class="disc">
-              <b>Member ID:</b> Located on your Member ID Card below the barcode
-              on back. Exactly how it appears: All caps, no spaces with letters
-              & numbers. (i.e.: "SMITH001-059")
-            </p>
-          </div>
-        </div>
-      </div>
       <div class="row wow fadeInUp" data-wow-offset="120" data-wow-delay=".3s">
         <iframe
-          src="https://teetimes.teequest.com/59"
+          src="https://teetimes.teequest.com/42"
           style="width: 100%; min-height: 1000px; margin-top: 0px; border: none"
           frameborder="0"
         ></iframe>
@@ -135,8 +106,6 @@
       <div class="loader-section section-left"></div>
       <div class="loader-section section-right"></div>
     </div>
-
-   
 
     <!-- progress area start -->
     <div class="progress-wrap">
