Greens fees page done.

--- a/greens-fees.html
+++ b/greens-fees.html
@@ -248,6 +248,7 @@
             <div class="row table-preface busy">
               <div class="col-12 col-md-8 col-lg-6">
                 <h3>Non-Standard Rates</h3>
+                <p>All rates are for 18 holes with cart.</p>
               </div>
               <div class="col-12 col-md-6"></div>
             </div>
@@ -263,14 +264,14 @@
                 <tr>
                   <th scope="row">
                     <div class="th-wrap">Active Duty Military (with ID)</div>
-                    <div class="note">includes cart</div>
+                    <!-- <div class="note">includes cart</div> -->
                   </th>
                   <td>$48</td>
                 </tr>
                 <tr>
                   <th scope="row">
                     <div class="th-wrap">College Student (with ID)</div>
-                    <div class="note">includes cart</div>
+                    <!-- <div class="note">includes cart</div> -->
                   </th>
                   <td>$42</td>
                 </tr>
@@ -342,40 +343,30 @@
               <thead>
                 <tr>
                   <th scope="col"></th>
-                  <th scope="col">Member</th>
-                  <th scope="col">Non-Member</th>
+                  <th scope="col">Price</th>
                 </tr>
               </thead>
               <tbody class="">
                 <tr>
                   <th scope="row">
-                    <div class="th-wrap">Small Bucket - 1 Token</div>
-                    <div class="note">Appx. 45 Balls</div>
+                    <div class="th-wrap">Small Token</div>
+                    <div class="note">30 Balls</div>
                   </th>
-                  <td>$5.85</td>
-                  <td>$6.51</td>
+                  <td>$7</td>
                 </tr>
                 <tr>
                   <th scope="row">
-                    <div class="th-wrap">Large Bucket - 2 Tokens</div>
-                    <div class="note">appx. 90 balls</div>
+                    <div class="th-wrap">Large Token</div>
+                    <div class="note">75 balls</div>
                   </th>
-                  <td>$8.37</td>
-                  <td>$9.30</td>
+                  <td>$10</td>
                 </tr>
                 <tr>
                   <th scope="row">
-                    <div class="th-wrap">5 Tokens</div>
+                    <div class="th-wrap">10 Bucket Range Card</div>
+                    <div class="note">10 small tokens (300 balls)</div>
                   </th>
-                  <td>$23.41</td>
-                  <td>$26.02</td>
-                </tr>
-                <tr>
-                  <th scope="row">
-                    <div class="th-wrap">10 Tokens</div>
-                  </th>
-                  <td>$33.50</td>
-                  <td>$37.22</td>
+                  <td>$60</td>
                 </tr>
               </tbody>
             </table>
@@ -390,8 +381,7 @@
             <hr />
             <div class="row table-preface">
               <div class="col-12 col-md-8 col-lg-6">
-                <h3>Punch Cards</h3>
-                <p>Can be used 7 days a week.</p>
+                <h3>Push Carts & Club Rental</h3>
               </div>
               <div class="col-12 col-md-6"></div>
             </div>
@@ -399,42 +389,26 @@
               <thead>
                 <tr>
                   <th scope="col"></th>
-                  <th scope="col">Member</th>
-                  <th scope="col">Non-Member</th>
+                  <th scope="col">9 Holes</th>
+                  <th scope="col">18 Holes</th>
                 </tr>
               </thead>
               <tbody class="">
                 <tr>
                   <th scope="row">
-                    <div class="th-wrap">10 x 9-Hole Rounds</div>
+                    <div class="th-wrap">Push Cart</div>
                   </th>
-                  <td>--</td>
-                  <td>$78.69</td>
+                  <td>$3</td>
+                  <td>$5</td>
                 </tr>
                 <tr>
                   <th scope="row">
-                    <div class="th-wrap">10 x 9-Hole Cart Uses</div>
+                    <div class="th-wrap">Rental Clubs</div>
                   </th>
-                  <td>--</td>
-                  <td>$78.69</td>
+                  <td>$12</td>
+                  <td>$20</td>
                 </tr>
-                <tr>
-                  <th scope="row">
-                    <div class="th-wrap">
-                      10 x Pool Guest Visits
-                      <img
-                        data-bs-toggle="tooltip"
-                        data-bs-title="Must be purchased by and accompanied by current member."
-                        data-bs-custom-class="custom-tooltip"
-                        class="explainer-icon"
-                        src="assets/images/icons/question-thick.svg"
-                        alt=""
-                      />
-                    </div>
-                  </th>
-                  <td>$36.87</td>
-                  <td>--</td>
-                </tr>
+                
               </tbody>
             </table>
           </div>
