--- a/index.html
+++ b/index.html
@@ -454,8 +454,8 @@
                     All players must check in at the clubhouse prior to play.
                   </li>
                   <li>
-                    By law, bringing alcoholic beverages onto Stagg Hill
-                    property is prohibited.
+                    Bringing alcoholic beverages onto Stagg Hill
+                    property is prohibited by law.
                   </li>
                   <li>All golfers must have their own clubs and bag.</li>
                   <li>
