Moved Sunflower Trail page to Membership Fees page as a sub-section.

--- a/membership-fees.html
+++ b/membership-fees.html
@@ -78,12 +78,12 @@
     </div>
     <!-- rts banner four end -->
 
-    <section class="rates-page-body">
+    <section class="rates-page-body membership">
       <div class="container">
         <div class="row">
           <!-- standard membership fees table -->
           <div
-            class="table-wrapper-basic-fees wow fadeInUp"
+            class="table-wrapper-basic-fees membership-table-wrapper wow fadeInUp"
             data-wow-offset="120"
             data-wow-delay=".9s"
           >
@@ -166,7 +166,9 @@
                 </tr>
                 <tr>
                   <th scope="row">
-                    <div class="th-wrap">Junior<span class='asterisks'>**</span></div>
+                    <div class="th-wrap">
+                      Junior<span class="asterisks">**</span>
+                    </div>
                     <div class="note">17 years and younger</div>
                   </th>
                   <td>$300</td>
@@ -174,7 +176,9 @@
                 </tr>
                 <tr>
                   <th scope="row">
-                    <div class="th-wrap">Student Bogey Membership<span class='asterisks'>**</span></div>
+                    <div class="th-wrap">
+                      Student Bogey Membership<span class="asterisks">**</span>
+                    </div>
                     <div class="note">
                       college, vocational, or trade schools
                     </div>
@@ -185,7 +189,10 @@
                 <tr>
                   <th scope="row">
                     <div class="th-wrap">
-                      Active Duty Military Bogey Membership<span class='asterisks'>**</span>
+                      Active Duty Military Bogey Membership<span
+                        class="asterisks"
+                        >**</span
+                      >
                     </div>
                   </th>
                   <td>$600</td>
@@ -203,13 +210,13 @@
             <div class="addendum">
               <div class="two-paragraphs">
                 <p>
-                  <span class='asterisks'>**</span>Junior, Active Duty Military, & Students are not required
-                  to pay an initiation fee, but do need to show proof of
-                  membership type chosen. No voting rights come along with these
-                  membership types. These rates are for Annual Green Fees only.
-                  These membership types are eligible for the Par, Birdie, or
-                  Eagle options at an aditional cost comperable to the other
-                  membership types.
+                  <span class="asterisks">**</span>Junior, Active Duty Military,
+                  & Students are not required to pay an initiation fee but do
+                  need to show proof of membership type chosen. No voting rights
+                  come along with these membership types. These rates are for
+                  Annual Green Fees only. These membership types are eligible
+                  for the Par, Birdie, or Eagle options at an aditional cost
+                  comperable to the other membership types.
                 </p>
                 <p>
                   All Membership Fees can be paid on an annual or a monthly
@@ -332,7 +339,69 @@
               </tbody>
             </table>
           </div>
-          
+        </div>
+      </div>
+    </section>
+
+    <!-- sunflower trail section check it -->
+    <section class="sunflower-trail-page-body" id="sunflower-trail">
+      <div class="container">
+        <div class="row">
+          <div
+            class="sunflower-trail-wrapper wow fadeInUp"
+            data-wow-offset="120"
+            data-wow-delay=".1s"
+          >
+            <h3>
+              <img
+                src="/assets/images/icons/sunflower.svg"
+                alt=""
+                class="injectable sunflower-icon"
+              />The Sunflower Trail
+            </h3>
+            <div class="sft-intro">
+              <u>As a member of Stagg Hill Golf Club, you are a member of the
+                Sunflower Golf Trail.</u> This allows you to play the following
+              courses for $25-$35 and that includes a cart! Please, see the golf
+              shop to get your Sunflower Trail card today so you can start
+              traveling and playing some other great courses.
+            </div>
+            <h6>Member Courses</h6>
+            <hr />
+            <ul class="sunflower-list">
+              <li><span class="b">Carey Park</span>, Hutchinson</li>
+              <li><span class="b">Cherry Oaks</span>, Cheney</li>
+              <li><span class="b">Emporia Municipal</span>, Emporia</li>
+              <li><span class="b">The Fort</span>, Hays</li>
+              <li><span class="b">Hesston Golf Park</span>, Hesston</li>
+              <li><span class="b">Hidden Lakes Golf Course</span>, Derby</li>
+              <li><span class="b">Mariah Hills</span>, Dodge City</li>
+              <li>
+                <span class="b">Prairie Trails Golf Course</span>, El Dorado
+              </li>
+              <li><span class="b">Quail Ridge</span>, Winfield</li>
+              <li>
+                <span class="b">Rolling Meadows Golf Course</span>, Junction
+                City
+              </li>
+              <li>
+                <span class="b">Salina Municipal Golf Course</span>, Salina
+              </li>
+              <li><span class="b">Spring Creek Golf Course</span>, Seneca</li>
+              <li>
+                <span class="b">Spring Hill Golf Course</span>, Arkansas City
+              </li>
+              <li><span class="b">Stagg Hill Golf Club</span>, Manhattan</li>
+              <li>
+                <span class="b">Sunflower Hills Golf Course</span>, Bonner
+                Springs
+              </li>
+              <li>
+                <span class="b">Turkey Creek Golf Course</span>, McPherson
+              </li>
+              <li><span class="b">Wellington Golf Club</span>, Wellington</li>
+            </ul>
+          </div>
         </div>
       </div>
     </section>
