Working on Men's League page.

--- a/pro-shop.html
+++ b/pro-shop.html
@@ -114,11 +114,11 @@
         </div>
       </div>
       <div class="container">
-        <hr />
-        <div class="row g-5 justify-content-between pt-4">
+        <!-- <hr /> -->
+        <div class="row g-5 justify-content-between pt-4 lined-row">
           <div class="col-5">
             <p class="shop-note">
-              The companies above are available in the golf shop. We can also
+              The brands above are available in the golf shop. We can also
               order products from Taylor Made and Cleveland Golf.
             </p>
           </div>
@@ -256,7 +256,7 @@
     </section>
 
     <section
-      class="rts-blog-area rts-section-gap position-relative homepage-notices"
+      class="rts-blog-area rts-section-gap position-relative homepage-notices mt-5"
     >
       <div class="container">
         <div
