Finished Calendar page.

--- a/mens-league.html
+++ b/mens-league.html
@@ -118,6 +118,10 @@
           <div class="row">
             <div class="title-center-style-two">
               <h2 class="title">2025 Men’s League Schedule</h2>
+              <div class="schedule-note">
+                We will tee off at 6pm each week Wednesday evening. Check in begins at
+                5:30. $10 for members and $15 for non-members.
+              </div>
             </div>
             <div class="col-lg-12">
               <div class="consulting-step">
