--- a/ladies-evening-league.html
+++ b/ladies-evening-league.html
@@ -136,6 +136,10 @@
           <div class="row">
             <div class="title-center-style-two">
               <h2 class="title">2025 Ladies Evening League Schedule</h2>
+              <div class="schedule-note">
+                We will tee off at 6pm each week on Thursday evening. Check in begins at
+                5:30. $10 for members and $15 for non-members.
+              </div>
             </div>
             <div class="col-lg-12">
               <div class="consulting-step">
